# datasource-mcp

./: .gitignore  LICENSE  README.md  datasource_mcp.py  main.py  pyproject.toml
src/datasource_mcp/: __init__.py  __main__.py  server.py
