[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasource-mcp"
version = "0.1.0"
description = "MySQL datasource MCP server for AI clients"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Peter", email = "wangguoxi52@gmail.com" },
]
keywords = ["mcp", "mysql", "database", "fastmcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "fastmcp>=3.4.2",
    "mysql-connector-python>=9.7.0",
]

[project.scripts]
datasource-mcp = "datasource_mcp.server:main"

[project.urls]
Homepage = "https://github.com/wangguoxi0814/datasource-mcp"
Repository = "https://github.com/wangguoxi0814/datasource-mcp"
Issues = "https://github.com/wangguoxi0814/datasource-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datasource_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
